--- a/css/estilos.css
+++ b/css/estilos.css
@@ -286,12 +286,12 @@
     min-height: 50vw;
   }
   .seccion-bibliografia-0 h2 {
-    font-size: 3rem;
+    font-size: 3.5rem;
     font-family: "Lobster", cursive;
   }
   .seccion-bibliografia-0 p {
     margin: 20px 0 40px;
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-family: "Lobster", cursive;
   }
 }
@@ -326,6 +326,14 @@
   z-index: -1;
 }
 
+@media screen and (min-width: 1024px) {
+  .header-fanposts h2 {
+    font-size: 3.3rem;
+  }
+  .header-fanposts p {
+    font-size: 1.5rem;
+  }
+}
 /*header fanshots*/
 .header-fanshots {
   min-height: 100vh;
@@ -347,15 +355,23 @@
   z-index: -1;
 }
 .header-fanshots .seccion-fanshots-0 h2 {
-  font-size: 3rem;
+  font-size: 4rem;
   font-family: "Righteous", cursive;
 }
 .header-fanshots .seccion-fanshots-0 p {
   margin: 20px 0 40px;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-family: "Righteous", cursive;
 }
 
+@media screen and (min-width: 1024px) {
+  .seccion-fanshots-0 h2 {
+    font-size: 6rem;
+  }
+  .seccion-fanshots-0 p {
+    font-size: 1.5rem;
+  }
+}
 /*header productos*/
 .header-productos {
   min-height: 100vh;
@@ -367,7 +383,7 @@
   z-index: 1;
 }
 .header-productos h2 {
-  font-size: 2rem;
+  font-size: 2.4rem;
 }
 .header-productos .titulo-productos {
   color: #fff;
@@ -381,9 +397,17 @@
   font-family: "Paytone One", sans-serif;
 }
 .header-productos .titulo-productos p {
-  font-size: 0.9rem;
+  font-size: 1.3rem;
 }
 
+@media screen and (min-width: 1024px) {
+  .header-productos h2 {
+    font-size: 3rem;
+  }
+  .titulo-productos p {
+    font-size: 1.5rem;
+  }
+}
 /*header contacto*/
 .header-contacto {
   min-height: 100vh;
@@ -410,7 +434,8 @@
   font-family: "Bebas Neue", cursive;
 }
 .header-contacto .contacto_titulo p {
-  font-size: 1.3rem;
+  padding-top: 10px;
+  font-size: 1.5rem;
 }
 
 .main {
@@ -1995,16 +2020,6 @@
 }
 
 @media screen and (min-width: 475px) {
-  .seccion-fanshots-0 {
-    height: auto;
-  }
-  .seccion-fanshots-0 h2 {
-    font-size: 4.7rem;
-  }
-  .seccion-fanshots-0 p {
-    font-size: 1.7rem;
-    margin-bottom: 5px;
-  }
   .seccion-fanshots-1 {
     grid-auto-columns: auto;
     grid-auto-rows: auto;
@@ -2030,14 +2045,6 @@
   }
 }
 @media screen and (min-width: 550px) {
-  .seccion-fanshots-0 h2 {
-    font-size: 6rem;
-    margin-top: 3.8rem;
-  }
-  .seccion-fanshots-0 p {
-    text-align: center;
-    padding: 1rem;
-  }
   .seccion-fanshots-1 {
     width: 85%;
     grid-gap: 5px;
@@ -2062,16 +2069,6 @@
   }
 }
 @media screen and (min-width: 768px) {
-  .seccion-fanshots-0 {
-    margin: auto;
-  }
-  .seccion-fanshots-0 h2 {
-    font-size: 7rem;
-    margin-top: 3.9rem;
-  }
-  .seccion-fanshots-0 p {
-    font-size: 1.9rem;
-  }
   .seccion-fanshots-1 {
     margin: 0 auto;
     width: 85%;
@@ -2101,17 +2098,6 @@
   }
 }
 @media screen and (min-width: 960px) {
-  .seccion-fanshots-0 {
-    margin: auto;
-  }
-  .seccion-fanshots-0 h2 {
-    font-size: 6.5rem;
-    margin-top: 3.9rem;
-  }
-  .seccion-fanshots-0 p {
-    font-size: 2.6rem;
-    margin: 1rem auto;
-  }
   .seccion-fanshots-1 {
     grid-gap: 10px;
     width: 85%;
