--- a/scss/_headers.scss
+++ b/scss/_headers.scss
@@ -135,13 +135,13 @@
   .seccion-bibliografia-0 {
 
     h2 {
-      font-size: 3rem;
+      font-size: 3.5rem;
       font-family: 'Lobster', cursive;
     }
     
     p {
       margin: 20px 0 40px;
-      font-size: 3rem;
+      font-size: 2.5rem;
       font-family: 'Lobster', cursive;
     }
   }
@@ -180,10 +180,22 @@
     margin-top: 2rem;
     z-index: -1;
   }
-  
-  
 }
 
+@media screen and (min-width: 1024px) { 
+  .header-fanposts {
+  
+    h2 {
+      font-size: 3.3rem;
+
+    }
+    
+    p {
+      font-size: 1.5rem;
+
+    } 
+  }
+}
 /*header fanshots*/
   
   .header-fanshots {
@@ -206,16 +218,28 @@
     z-index: -1;
 
     h2 {
-      font-size: 3.0rem;
+      font-size: 4rem;
       font-family: 'Righteous', cursive;
 
     }
     
     p {
       margin: 20px 0 40px;
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       font-family: 'Righteous', cursive;
     } 
+  }
+}
+
+@media screen and (min-width: 1024px) {
+
+  .seccion-fanshots-0 {
+    h2 {
+      font-size: 6rem;
+    }
+    p {
+      font-size: 1.5rem;
+    }
   }
 }
 
@@ -231,11 +255,10 @@
     z-index: 1;
 
     h2 {
-      font-size: 2.0rem;
+      font-size: 2.4rem;
     }
  
   .titulo-productos {
-
     color: #fff;
     position: absolute;
     top: 50%;
@@ -247,11 +270,23 @@
     font-family: 'Paytone One', sans-serif;
 
     p {
-      font-size: 0.9rem;
+      font-size: 1.3rem;
     }
   }
 }
 
+@media screen and (min-width: 1024px) {
+  .header-productos {
+    h2 {
+      font-size: 3rem;
+    }
+  }
+  .titulo-productos {
+    p {
+      font-size: 1.5rem;
+    }
+  }
+}
 /*header contacto*/
 
   .header-contacto {
@@ -264,7 +299,7 @@
     z-index: 1;
     
     h2 {
-      font-size: 3rem;
+      font-size: 3.0rem;
     }
   
   .contacto_titulo {
@@ -280,7 +315,8 @@
     font-family: "Bebas Neue", cursive;
     
     p {
-      font-size: 1.3rem;
+      padding-top: 10px;
+      font-size: 1.5rem;
     }
   }
 }
